--- a/android/app/src/main/res/layout/activity_sign_up.xml
+++ b/android/app/src/main/res/layout/activity_sign_up.xml
@@ -226,7 +226,7 @@
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_marginStart="@dimen/margin_start"
-        android:layout_marginTop="@dimen/margin_large"
+        android:layout_marginTop="@dimen/margin_xlarge"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:contentDescription="Geri"
         android:onClick="gotoBack"
