--- a/android/app/src/main/res/layout/activity_university_info.xml
+++ b/android/app/src/main/res/layout/activity_university_info.xml
@@ -16,7 +16,7 @@
         app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="0dp"
         app:cardElevation="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/scrollView13"
+        app:layout_constraintBottom_toTopOf="@+id/scrollView12"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -35,19 +35,21 @@
             tools:ignore="OnClick" />
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/margin_top_header"
             android:gravity="center"
             android:text="Üniversite Bilgileri"
             android:textColor="#000000"
             android:textSize="@dimen/text_normal2"
             android:textStyle="bold" />
+
     </com.google.android.material.card.MaterialCardView>
 
     <!--ScrollView-->
     <ScrollView
-        android:id="@+id/scrollView13"
+        android:id="@+id/scrollView12"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:fillViewport="true"
