--- a/android/app/src/main/res/layout/activity_academician_login.xml
+++ b/android/app/src/main/res/layout/activity_academician_login.xml
@@ -174,6 +174,7 @@
                 android:layout_height="@dimen/button_height"
                 android:layout_marginVertical="@dimen/margin_xsmall"
                 android:backgroundTint="#EEEEEE"
+                android:onClick="forgotPassword"
                 android:text="Şifremi Unuttum"
                 android:textColor="#000000"
                 android:textSize="@dimen/text_normal"
