--- a/android/app/src/main/res/layout/activity_industry.xml
+++ b/android/app/src/main/res/layout/activity_industry.xml
@@ -41,7 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_normal"
-                android:text="Sanayi"
+                android:text="Sanayi / Girişimci"
                 android:textColor="#000000"
                 android:textSize="@dimen/text_xlarge"
                 android:textStyle="bold" />
