--- a/android/app/src/main/res/layout/stat_card_summary.xml
+++ b/android/app/src/main/res/layout/stat_card_summary.xml
@@ -74,7 +74,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Sanayi"
+                android:text="Sanayi/Girişimci"
                 android:textColor="#777777"
                 android:textSize="@dimen/text_stat_card" />
         </LinearLayout>
