academician contact info activity,student department info activity, xmls updated

--- a/android/app/src/main/res/layout/activity_academician_get_info.xml
+++ b/android/app/src/main/res/layout/activity_academician_get_info.xml
@@ -100,7 +100,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_normal"
                 android:background="@drawable/edittext_bg"
-                android:hint="Bölümünüz"
+                android:hint="Biriminiz"
                 android:inputType="text"
                 android:minHeight="@dimen/button_height"
                 android:padding="@dimen/padding_normal"
