--- a/android/app/src/main/res/layout/activity_academic_info.xml
+++ b/android/app/src/main/res/layout/activity_academic_info.xml
@@ -66,7 +66,7 @@
             android:paddingBottom="300dp">
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/margin_small"
@@ -75,16 +75,26 @@
                 android:textSize="@dimen/text_normal"
                 android:textStyle="bold" />
 
+            <TextView
+                android:id="@+id/warning"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/margin_small"
+                android:text="Lütfen akademik geçmişinizi detaylı ve açık bir şekilde yazınız"
+                android:textColor="#8A8585"
+                android:textSize="12sp"
+                android:textStyle="bold" />
+
             <EditText
                 android:id="@+id/academicEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:scrollbars="vertical"
                 android:background="@drawable/edittext_bg"
                 android:gravity="start|top"
                 android:inputType="textMultiLine"
                 android:minHeight="150dp"
                 android:padding="@dimen/padding_normal"
+                android:scrollbars="vertical"
                 android:textColor="#000000"
                 android:textSize="@dimen/text_normal" />
 
