--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -1,193 +1,202 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    tools:context=".view.academicianView.MainActivity">
+    android:fillViewport="true">
 
-    <!-- Ana dikey grup-->
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/centerGroup"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.25">
+        android:id="@+id/main"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        <!-- Logo -->
-        <ImageView
-            android:id="@+id/logoTto"
+        <!-- Ana dikey grup-->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/centerGroup"
             android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintDimensionRatio="1:1"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintWidth_percent="0.35"
-            app:srcCompat="@drawable/usi_logo" />
-
-        <!-- App Name -->
-        <TextView
-            android:id="@+id/appName"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_normal"
-            android:text="USIApp"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/text_xlarge"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/logoTto" />
-
-        <!-- Hoş Geldiniz -->
-        <TextView
-            android:id="@+id/welcomeText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_large"
-            android:text="USIApp’e Hoş Geldiniz"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/text_large"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/appName" />
-
-        <!-- Açıklama -->
-        <TextView
-            android:id="@+id/chooseText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_small"
-            android:text="Lütfen devam etmek için hesabınızı seçiniz"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/text_normal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/welcomeText" />
-
-        <!-- Öğrenci -->
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnStudent"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/button_height"
-            android:layout_marginHorizontal="@dimen/margin_large"
-            android:layout_marginTop="@dimen/margin_large"
-            android:onClick="clickStudent"
-            android:text="Öğrenci"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/text_normal2"
-            app:backgroundTint="#EEEEEE"
-            app:cornerRadius="@dimen/card_corner"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/chooseText" />
-
-        <!-- Akademisyen -->
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnAcademician"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/button_height"
-            android:layout_marginHorizontal="@dimen/margin_large"
-            android:layout_marginTop="@dimen/margin_small"
-            android:onClick="clickAcademician"
-            android:text="Akademisyen"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/text_normal2"
-            app:backgroundTint="#EEEEEE"
-            app:cornerRadius="@dimen/card_corner"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btnStudent" />
-
-        <!-- Sanayici -->
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnIndustry"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/button_height"
-            android:layout_marginHorizontal="@dimen/margin_large"
-            android:layout_marginTop="@dimen/margin_small"
-            android:onClick="clickIndustry"
-            android:text="Sanayi / Girişimci"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/text_normal2"
-            app:backgroundTint="#EEEEEE"
-            app:cornerRadius="@dimen/card_corner"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btnAcademician" />
-
-        <!--Giriş yap-->
-        <LinearLayout
-            android:id="@+id/text_info"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="@dimen/margin_normal"
-            android:gravity="center"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btnIndustry">
-
-            <View
-                android:layout_width="90dp"
-                android:layout_height="1dp"
-                android:background="#999999" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/margin_horizontal_s"
-                android:text="Giriş yapmadan devam et"
-                android:textColor="#888888"
-                android:textSize="@dimen/text_small" />
-
-            <View
-                android:layout_width="90dp"
-                android:layout_height="1dp"
-                android:background="#999999" />
-        </LinearLayout>
-
-        <!-- Açık talepleri gör -->
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnSeeOpenRequests"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/button_height"
-            android:layout_marginHorizontal="@dimen/margin_large"
-            android:layout_marginTop="@dimen/margin_top_header"
-            android:onClick="seeOpenRequests"
-            android:text="Açık Talepleri Gör"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/text_normal2"
-            app:backgroundTint="#EEEEEE"
-            app:cornerRadius="@dimen/card_corner"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/text_info"
-            tools:ignore="OnClick" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.25">
+
+            <!-- Logo -->
+            <ImageView
+                android:id="@+id/logoTto"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:adjustViewBounds="true"
+                android:maxWidth="160dp"
+                android:maxHeight="160dp"
+                app:layout_constraintDimensionRatio="1:1"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintWidth_percent="0.35"
+                app:srcCompat="@drawable/usi_logo" />
+
+            <!-- App Name -->
+            <TextView
+                android:id="@+id/appName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_normal"
+                android:text="USIApp"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/text_xlarge"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/logoTto" />
+
+            <!-- Hoş Geldiniz -->
+            <TextView
+                android:id="@+id/welcomeText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_large"
+                android:text="USIApp’e Hoş Geldiniz"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/text_large"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/appName" />
+
+            <!-- Açıklama -->
+            <TextView
+                android:id="@+id/chooseText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_small"
+                android:text="Lütfen devam etmek için hesabınızı seçiniz"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/text_normal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/welcomeText" />
+
+            <!-- Öğrenci -->
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnStudent"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/button_height"
+                android:layout_marginHorizontal="@dimen/margin_large"
+                android:layout_marginTop="@dimen/margin_large"
+                android:onClick="clickStudent"
+                android:text="Öğrenci"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/text_normal2"
+                app:backgroundTint="#EEEEEE"
+                app:cornerRadius="@dimen/card_corner"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/chooseText" />
+
+            <!-- Akademisyen -->
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnAcademician"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/button_height"
+                android:layout_marginHorizontal="@dimen/margin_large"
+                android:layout_marginTop="@dimen/margin_small"
+                android:onClick="clickAcademician"
+                android:text="Akademisyen"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/text_normal2"
+                app:backgroundTint="#EEEEEE"
+                app:cornerRadius="@dimen/card_corner"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/btnStudent" />
+
+            <!-- Sanayici -->
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnIndustry"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/button_height"
+                android:layout_marginHorizontal="@dimen/margin_large"
+                android:layout_marginTop="@dimen/margin_small"
+                android:onClick="clickIndustry"
+                android:text="Sanayi / Girişimci"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/text_normal2"
+                app:backgroundTint="#EEEEEE"
+                app:cornerRadius="@dimen/card_corner"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/btnAcademician" />
+
+            <!--Giriş yap-->
+            <LinearLayout
+                android:id="@+id/text_info"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="@dimen/margin_normal"
+                android:gravity="center"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/btnIndustry">
+
+                <View
+                    android:layout_width="90dp"
+                    android:layout_height="1dp"
+                    android:background="#999999" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/margin_horizontal_s"
+                    android:text="Giriş yapmadan devam et"
+                    android:textColor="#888888"
+                    android:textSize="@dimen/text_small" />
+
+                <View
+                    android:layout_width="90dp"
+                    android:layout_height="1dp"
+                    android:background="#999999" />
+            </LinearLayout>
+
+            <!-- Açık talepleri gör -->
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnSeeOpenRequests"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/button_height"
+                android:layout_marginHorizontal="@dimen/margin_large"
+                android:layout_marginTop="@dimen/margin_top_header"
+                android:onClick="seeOpenRequests"
+                android:text="Açık Talepleri Gör"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/text_normal2"
+                app:backgroundTint="#EEEEEE"
+                app:cornerRadius="@dimen/card_corner"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/text_info"
+                tools:ignore="OnClick" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <!-- Alt bilgi -->
+        <TextView
+            android:id="@+id/footerText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="28dp"
+            android:text="@string/footer_text"
+            android:textAlignment="center"
+            android:textColor="#888888"
+            android:textSize="@dimen/text_footer"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/centerGroup" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-    <!-- Alt bilgi -->
-    <TextView
-        android:id="@+id/footerText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:text="@string/footer_text"
-        android:textAlignment="center"
-        android:textColor="#888888"
-        android:textSize="@dimen/text_footer"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/centerGroup" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
